tests/errors/syntax/function-unclosed.fn
---
Description: Function with opening brace but no close
Expected: compile error
---

type Broken
{
    fn test
    {

}

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
